<resources>
    <string name="app_name">Centauri</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="username_email_address">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_in">Log In</string>
    <string name="create_an_account">Create An Account</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email"><i>Enter Email Address</i></string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="string_username_incorrect">"Username length must be > 5"</string>
    <string name="string_password_incorrect">"Password length must be > 5"</string>
    <string name="string_confirm_password_incorrect">Passwords don\'t match</string>
    <string name="register_string_fname_incorrect">Full name length must be > 1</string>
    <string name="register_string_email_incorrect">Email incorrect</string>
    <string name="register_string_password_incorrect">Password incorrect</string>
    <string name="register_string_confirm_password_incorrect">Passwords don\'t match</string>
    <string name="register_string_phone_number_incorrect">Phone number incorrect</string>
    <string name="email">Email</string>
    <string name="registration_password_length">Password not long enough</string>
    <string name="registration_password_lowercase_char">Password requires one lowercase letter</string>
    <string name="registration_password_uppercase_char">Password requires one uppercase letter</string>
    <string name="registration_password_number">Password requires one number</string>
    <string name="registration_phone_number_resource_a">%1$s</string>
    <string name="registration_phone_number_resource_b">%1$s-%2$s</string>
    <string name="registration_phone_number_resource_c">%1$s-%2$s-%3$s</string>
    <string name="wish_list">Wish List</string>
    <string name="view_history">View History</string>
    <string name="view_all_items">View All Items</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="need_help">Need Help?</string>
    <string name="home_welcome_text">Welcome</string>
    <string name="settings_search">Settings Search</string>
    <string name="searchLabel">search</string>
    <string name="accountBtn">Account</string>
    <string name="notificationsBtn">Notifications</string>
    <string name="proximaBtn">Proxima</string>
    <string name="appearenceBtn">Appearence</string>
    <string name="privacyBtn"><![CDATA[Privacy & Security]]></string>
    <string name="helpBtn"><![CDATA[Help & Support]]></string>
    <string name="locationBtn">Location</string>
    <string name="aboutBtn">About</string>
    <string name="arrow">arrow</string>
    <string name="search_keyword_str">Search Keyword</string>
    <string name="search_cart_amount_str">0</string>
    <string name="addListingHeader">Add Listing</string>
    <string name="upload_image">Upload Image</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="auctionSwitch">Auction</string>
    <string name="buyNowSwitch">Buy Now</string>
    <string name="item_description">Item Description</string>
    <string name="categories">Categories</string>
    <string name="price">Price</string>
    <string name="min_bid">Min Bid Incre.</string>
    <string name="auction_length">Auction Length</string>
    <string name="starting_bid">Starting Bid</string>
    <string name="category_2">Category 2</string>
    <string name="main_category">Main Category</string>
    <string name="category_3">Category 3</string>
    <string name="category_5">Category 5</string>
    <string name="category_4">Category 4</string>
    <string name="backarrow">backArrow</string>
    <string name="addimage">addImage</string>
    <string name="lineimage">lineImage</string>
    <string name="temp_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…</string>
    <string name="view_more">View More</string>
    <string name="createItemButton">Create Item</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="itemQualityText">Item Quality</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="landing_proceed_user">Proceed as a User</string>
    <string name="landing_proceed_business">Proceed as a Business</string>
    <string name="register_email_address">Email Address</string>
    <string name="business_email_address">Business Email Address</string>
    <string name="view_selected_images">View Selected</string>
    <string name="starting_bid_amount">Starting Bid Amount</string>
    <string name="buyout_price">Buyout Price</string>
    <string name="selected_images">Selected Images</string>
    <string name="productsLabel">Products</string>
    <string name="seller_description_label">Description</string>
    <string name="seller_name_text">Seller Name</string>
    <string name="sellerprofileimage">sellerProfileImage</string>
    <string name="add_listing_Btn">Add Listing</string>
    <string name="my_auctions_Btn">My Auctions</string>
    <string name="orders_Btn">Orders</string>
    <string name="icon">icon</string>
    <string name="continue_as_guest_user">Continue as Guest User</string>
    <string name="cart_price">$%1$f</string>
    <string name="cart_quantity">QTY %1$d</string>
    <string name="cart_item_name">%1$s</string>
</resources>